# SudOOku

./: .travis.yml  CMakeLists.txt  README.md  main.cpp  sonar-project.properties
cmake/: googletest-download.cmake
matrix/: field.cpp  field.h  forkHelper.cpp  forkHelper.h  matrix.cpp  matrix.h  matrixReader.cpp
solvers/: basicSolver.cpp  basicSolver.h  recursiveSolver.h  solver.cpp  solver.h
strategies/: columnStrategy.cpp  groupStrategy.cpp  rowStrategy.cpp  rowStrategy.h  solvingStrategy.cpp  solvingStrategy.h  strategies.h  trivialStrategy.cpp  trivialStrategy.h
sudooku_controller/: CMakeLists.txt  sudookuController.cpp  sudookuController.h
sudooku_controller/exceptions/: CMakeLists.txt
sudooku_controller/handlers/input_handlers/: CMakeLists.txt  fileInputHandler.cpp  fileInputHandler.h  inputHandler.h
sudooku_controller/handlers/output_handlers/: CMakeLists.txt  fileOutputHandler.cpp  fileOutputHandler.h  outputHandler.h
sudooku_core/: CMakeLists.txt  main.cpp
sudooku_core/exceptions/: noStrategiesException.cpp  noStrategiesException.h
sudooku_core/matrix/: CMakeLists.txt  field.cpp  field.h  forkHelper.cpp  matrix.cpp  matrix.h  matrixReader.cpp  matrixReader.h
sudooku_core/solvers/: solver.cpp  solver.h
sudooku_core/strategies/: columnStrategy.cpp  columnStrategy.h  diagonalStrategy.cpp  diagonalStrategy.h  groupStrategy.cpp  groupStrategy.h  rowStrategy.cpp  rowStrategy.h  solvingStrategy.h
sudooku_src/: CMakeLists.txt  main.cpp
sudooku_src/sudooku_controller/: CMakeLists.txt  sudookuController.cpp  sudookuController.h  sudookuEvents.h
sudooku_src/sudooku_controller/exceptions/: noMatrixProvidedException.cpp  noMatrixProvidedException.h  wrongEventTypeException.cpp  wrongEventTypeException.h
sudooku_src/sudooku_controller/handlers/: CMakeLists.txt
sudooku_src/sudooku_controller/handlers/input_handlers/: CMakeLists.txt  fileInputHandler.cpp  fileInputHandler.h  inputHandler.h
sudooku_src/sudooku_controller/handlers/output_handlers/: fileOutputHandler.cpp  fileOutputHandler.h  outputHandler.h
sudooku_src/sudooku_core/: main.cpp
sudooku_src/sudooku_core/exceptions/: CMakeLists.txt  fieldDoesntContainValueException.cpp  fieldDoesntContainValueException.h  noMatrixException.cpp  noMatrixException.h  noStrategiesException.cpp  noStrategiesException.h
sudooku_src/sudooku_core/matrix/: CMakeLists.txt  field.cpp  field.h  forkHelper.cpp  forkHelper.h  matrix.cpp  matrix.h
sudooku_src/sudooku_core/solvers/: CMakeLists.txt  solver.cpp  solver.h
sudooku_src/sudooku_core/strategies/: CMakeLists.txt  columnStrategy.cpp  columnStrategy.h  diagonalStrategy.cpp  diagonalStrategy.h  groupStrategy.cpp  groupStrategy.h  rowStrategy.cpp  rowStrategy.h  solvingStrategy.h
sudooku_src/sudooku_visual/: CMakeLists.txt  sudookuPrinter.h  sudookuReader.h
sudooku_src/sudooku_visual/print_matrix_to_file/: printMatrixToFile.cpp  printMatrixToFile.h
sudooku_src/sudooku_visual/read_matrix_from_file/: readMatrixFromFile.cpp  readMatrixFromFile.h
sudooku_tests/: CMakeLists.txt  main.cpp
sudooku_tests/controller_tests/: CMakeLists.txt  controllerTest.cpp  fileInputHandlerTest.cpp  fileOutputHandlerTest.cpp
sudooku_tests/controller_tests/helper_classes/: mockInputHandler.h  mockOutputHandler.h
sudooku_tests/core_tests/: CMakeLists.txt
sudooku_tests/core_tests/matrix_tests/: CMakeLists.txt  fieldTest.cpp  forkHelperTest.cpp  matrixTest.cpp
sudooku_tests/core_tests/matrix_tests/helper_classes/: mockField.h  mockMatrix.cpp  mockMatrix.h
sudooku_tests/core_tests/solver_tests/: CMakeLists.txt  solverTest.cpp
sudooku_tests/core_tests/strategy_tests/: CMakeLists.txt  columnStrategyTest.cpp  diagonalStrategyTest.cpp  groupStrategyTest.cpp  rowStrategyTest.cpp
sudooku_tests/lib/googletest/: CMakeLists.txt
sudooku_tests/lib/googletest/cmake/: internal_utils.cmake
sudooku_tests/lib/googletest/samples/: prime_tables.h  sample1.cc  sample10_unittest.cc  sample3_unittest.cc  sample5_unittest.cc  sample6_unittest.cc  sample7_unittest.cc  sample8_unittest.cc  sample9_unittest.cc
sudooku_tests/lib/googletest/scripts/: gen_gtest_pred_impl.py  upload.py
sudooku_tests/lib/googletest/src/: gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest-printers.cc  gtest-test-part.cc  gtest-typed-test.cc  gtest.cc  gtest_main.cc
sudooku_tests/lib/googletest/test/: googletest-catch-exceptions-test.py  googletest-catch-exceptions-test_.cc  googletest-death-test-test.cc  googletest-death-test_ex_test.cc  googletest-env-var-test.py  googletest-filepath-test.cc  googletest-filter-unittest.py  googletest-filter-unittest_.cc  googletest-json-outfiles-test.py  googletest-json-output-unittest.py  googletest-linked-ptr-test.cc  googletest-list-tests-unittest_.cc  googletest-listener-test.cc  googletest-options-test.cc  googletest-output-test.py  googletest-output-test_.cc  googletest-param-test-invalid-name1-test_.cc  googletest-param-test-invalid-name2-test_.cc  googletest-param-test-test.cc  googletest-param-test-test.h  googletest-param-test2-test.cc  googletest-port-test.cc  googletest-printers-test.cc  (+21 more)
sudooku_tests/matrix_tests/: CMakeLists.txt  fieldTest.cpp  forkHelperTest.cpp  matrixTest.cpp
sudooku_tests/matrix_tests/helper_classes/: mockField.h  mockMatrix.h
sudooku_tests/solver_tests/: CMakeLists.txt  solverTest.cpp
sudooku_tests/strategy_tests/: CMakeLists.txt  columnStrategyTest.cpp  diagonalStrategyTest.cpp  groupStrategyTest.cpp  rowStrategyTest.cpp
sudooku_tests/testInputs/: invalid1.mat  invalid2.mat  invalid3.mat  invalid4.mat  invalid5.mat  invalidMatrix1.mat  small1.mat  small2.mat  small3.mat  small4.mat  small5.mat  small6.mat  test1.mat  test5.mat
sudooku_tests/visual_tests/: CMakeLists.txt  printMatrixToFileTest.cpp  readMatrixFromFileTest.cpp
sudooku_visual/: CMakeLists.txt  sudookuPrinter.h
sudooku_visual/console_view/: matrixConsolePrinter.cpp  matrixConsolePrinter.h
sudooku_visual/print_matrix_to_file/: printMatrixToFile.cpp  printMatrixToFile.h
tests/: test2.txt  test3.txt  test4.txt
(+20 files in other folders)
