add_library(
        sudooku_core
        solvers/solver.cpp
        solvers/solver.h
        strategies/solvingStrategy.h
        strategies/rowStrategy.cpp
        strategies/columnStrategy.cpp
        strategies/groupStrategy.cpp
        strategies/columnStrategy.h
        strategies/groupStrategy.h
        strategies/rowStrategy.h
        matrix/matrix.cpp
        matrix/matrix.h
        matrix/field.cpp
        matrix/field.h
        matrix/forkHelper.cpp
        matrix/forkHelper.h
        matrix/matrixReader.cpp
        matrix/matrixReader.h)
